fix: refactors suggested by intellij